applications/gateways/staging/gateways/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: st-nowca-wildcard
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - port:
        number: 80
        name: http-st-nowca-wildcard
        protocol: HTTP
      hosts:
        - podinfo.staging.nowca.st
        - sso.staging.nowca.st
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https-st-nowca-wildcard
        protocol: HTTPS
      hosts:
        - podinfo.staging.nowca.st
        - sso.staging.nowca.st
      tls:
        credentialName: st-nowca-wildcard-tls
        mode: SIMPLE
