applications/gateways/staging/gateways/authorization-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: oauth-proxy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: CUSTOM
  provider:
    name: "oauth2-proxy"
  rules:
    - to:
        - operation:
            hosts:
              - podinfo.staging.nowca.st
              - podinfo2.staging.nowca.st
